[metadata]
name = gemspa-spt
version = 0.0.1
description = A package for analysis of single particle tracking experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/liamholtlab/gemspa-spt
author = Sarah Keegan
author_email = sarah.keegan@nyulangone.org
license = BSD-3-Clause
license_files = LICENSE

[options]
packages = find:
install_requires =
    scikit-image
    pandas

python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src
